[package]
name = "pie"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pie"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
tar = "0.4"
zstd = "0.13"
clap = { version = "4.0", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
tempfile = "3.21"
terminal_size = "0.4.3"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
